salvia_macro/tests/query_ui/fail/arg_wildcard_context.rs
#![allow(unused_imports)]

use salvia::{query, QueryContext};

#[query]
async fn f(_i: i32, _: &QueryContext) {}

fn main() {}
