salvia_macro/tests/query_ui/fail/arg_wildcard_context.stderr
error: #[query]: wildcard pattern is not supported, consider giving it a name starting with `_`, for ex. `_my_var`; even though your function doesn't need that parameter, query must capture and cache it to correctly function
 --> $DIR/arg_wildcard_context.rs:6:21
  |
6 | async fn f(_i: i32, _: &QueryContext) {}
  |                     ^
